--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 
         }, false);
         var tgame = new Phaser.Game(1080, 1920, Phaser.CANVAS, 'game');
-        tgame.state.add('Boot', FappyBird.Boot);
-        tgame.state.add('Loading', FappyBird.Loading);
-        // game.state.add('Debug', FappyBird.Debug);
-        tgame.state.add('Game', FappyBird.Game);
-        tgame.state.add('GameOver', FappyBird.GameOver);
-        tgame.state.add('Menu', FappyBird.Menu);
-        tgame.state.add('Store', FappyBird.Store);
-        tgame.state.add('Credits', FappyBird.Credits);
-        tgame.state.add('Settings', FappyBird.Settings);
-        tgame.state.add('EthanBucks', FappyBird.EthanBucks);
+        tgame.state.add('Boot', Ethan.Boot);
+        tgame.state.add('Loading', Ethan.Loading);
+        // game.state.add('Debug', Ethan.Debug);
+        tgame.state.add('Game', Ethan.Game);
+        tgame.state.add('GameOver', Ethan.GameOver);
+        tgame.state.add('Menu', Ethan.Menu);
+        tgame.state.add('Store', Ethan.Store);
+        tgame.state.add('Credits', Ethan.Credits);
+        tgame.state.add('Settings', Ethan.Settings);
+        tgame.state.add('EthanBucks', Ethan.EthanBucks);
         tgame.state.start('Boot');
     </script>
 </body>
