Changed background colour to black

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="mobile-web-app-capable" content="yes">
     <style>
+        body{
+            background: #000000;
+        }
         canvas{
             position: absolute;
             top: 0;
