--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <style>
         body{
             background: #000000;
@@ -20,13 +21,13 @@
     <script src="js/boot.js"></script>
     <script src="js/loading.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/debugmode.js"></script>
     <script src="js/ingame.js"></script>
     <script src="js/gameover.js"></script>
     <script src="js/store.js"></script>
     <script src="js/credits.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/ethanbucks.js"></script>
-    <script src="js/debug.js"></script>
     <script src="cordova.js"></script>
     <script>
         document.addEventListener('deviceready', function(){
@@ -35,20 +36,21 @@
 
         }, false);
         window.onerror = function(message, url, lineNumber){
-            alert("Error: "+message+" at "+url+":"+lineNumber);
+            alert(message+" at "+url+":"+lineNumber);
             return true;
         };
         var tgame = new Phaser.Game(1080, 1920, Phaser.CANVAS, 'game');
         tgame.state.add('Boot', Ethan.Boot);
         tgame.state.add('Loading', Ethan.Loading);
-        tgame.state.add('Debug', Ethan.Debug);
         tgame.state.add('Game', Ethan.Game);
         tgame.state.add('GameOver', Ethan.GameOver);
+        tgame.state.add('DebugMode', Ethan.Debug);
         tgame.state.add('Menu', Ethan.Menu);
         tgame.state.add('Store', Ethan.Store);
         tgame.state.add('Credits', Ethan.Credits);
         tgame.state.add('Settings', Ethan.Settings);
         tgame.state.add('EthanBucks', Ethan.EthanBucks);
+
         tgame.state.start('Boot');
     </script>
 </body>
